[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lightquakevisualizer"
version = "0.0.6"
authors = [
    {name = "Thomas Ulrich"},
]
description = "A collection of scripts to visualize SeisSol output using pyvista"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["pyvista", "SeisSol"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "cmasher", "cmcrameri","matplotlib", "numpy", "pyvista", "seissolxdmf>=0.1.3", "vtk", "Pillow"
]
[project.urls]
Repository = "https://github.com/Thomas-Ulrich/light-quake-visualizer.git"

[project.scripts]
light_quake_visualizer = "lightquakevisualizer.lightQuakeVisualizer:main"
generate_color_bar = "lightquakevisualizer.generateColorBar:main"
image_combiner = "lightquakevisualizer.imageCombiner:main"

